Fixed footer, aligned right.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,4 +32,5 @@ body {
 .footDiv {
   font-size:21px;
   color: gray;
+  text-align: right;
 }
